fix: hamburger menu overflow

--- a/css/home/home.css
+++ b/css/home/home.css
@@ -2,6 +2,10 @@
 @import "./menu.css";
 @import "./historico.css";
 @import "./selectAnimal.css";
+
+html,body{
+    overflow-x: hidden;
+}
 .home-container{
     width: 100%;
     height: 100vh;
